--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL='http://nordicway.ru/'
+REACT_APP_API_URL='http://nordicway.ru'
 REACT_APP_URL='http://nordicway.ru/'
 REACT_APP_URL_PREFIX='http://nordicway.ru/temp/'
