--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fullpage": "^0.1.19",
     "react-hooks-paginator": "^0.4.0",
     "react-id-swiper": "2.4.0",
+    "react-image-gallery": "^1.2.11",
     "react-lightgallery": "0.6.3",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-meta-tags": "^0.7.4",
