--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL='http://nordicway.ru'
-REACT_APP_URL='http://nordicway.ru/'
+REACT_APP_API_URL='https://www.nordicway.ru'
+REACT_APP_URL='https://www.nordicway.ru/'
